# VibeEye

./: .cargo-crap-baseline.json  .cargo-crap.toml  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  cobertura.xml  crawl.example.toml  history.txt  known_issues.md  lcov.info  rules.md
.github/workflows/: cargo-crap.yml  ci.yml
.kittify/: config.yaml  metadata.yaml
.kittify/charter/: charter.md
.kittify/charter/interview/: answers.yaml
crates/vibeeye-app/: Cargo.toml
crates/vibeeye-app/src/: batch.rs  discovery.rs  error.rs  lib.rs  progress.rs  tool_registry.rs
crates/vibeeye-app/src/browser/: engine.rs  mod.rs  navigation.rs
crates/vibeeye-app/src/chunk/: mod.rs
crates/vibeeye-app/src/config/: crawl.rs  embeddings.rs  mod.rs
crates/vibeeye-app/src/crawl/: links.rs  mod.rs  output.rs  robots.rs  sitemap.rs  validator.rs
crates/vibeeye-app/src/db/: client.rs  export.rs  import.rs  mod.rs  models.rs  ops.rs  output.rs  schema.rs  util.rs
crates/vibeeye-app/src/db/migrations/: 001_initial.surql  002_add_chunks.surql  003_add_meta.surql  mod.rs
crates/vibeeye-app/src/embed/: mod.rs  provider.rs
crates/vibeeye-app/src/extraction/: dom.rs  markdown.rs  mod.rs
crates/vibeeye-app/src/tools/: browse.rs  common.rs  extract.rs  mod.rs  snapshot.rs  tests.rs
crates/vibeeye-app/tests/: crawl_e2e.rs  e2e_nav_test.rs
crates/vibeeye-cli/: Cargo.toml
crates/vibeeye-cli/src/: cli.rs  commands.rs  format.rs  help_tree.rs  lib.rs  main.rs
crates/vibeeye-cli/src/help_tree/: render.rs  theme.rs
crates/vibeeye-cli/tests/: parity_test.rs
crates/vibeeye-core/: Cargo.toml
crates/vibeeye-core/src/: domain.rs  error.rs
crates/vibeeye-mcp/: Cargo.toml
crates/vibeeye-mcp/src/: handler.rs  main.rs  tools.rs
kitty-specs/001-vibe-eye-core/: data-model.md  meta.json  mission-events.jsonl
kitty-specs/001-vibe-eye-core/research/: evidence-log.csv
kitty-specs/002-vibe-eye-core/: data-model.md  meta.json  mission-events.jsonl  plan.md  research.md  spec.md  status.events.jsonl  status.json  tasks.md
kitty-specs/002-vibe-eye-core/checklists/: requirements.md
kitty-specs/002-vibe-eye-core/research/: source-register.csv
kitty-specs/002-vibe-eye-core/tasks/: WP01-workspace-init.md  WP02-sonar-core.md  WP03-cli-thin.md  WP03-headless-nav.md  WP04-mcp-interface.md  WP04-mcp-thin.md  WP05-browser-engine.md  WP05-sonar-validation.md  WP06-content-capture.md  WP07-integration.md
kitty-specs/003-surrealdb-integration/: brainstorm.md  plan.md  spec.md
