[workspace]
members = [
    "crates/vibeeye-core",
    "crates/vibeeye-app",
    "crates/vibeeye-cli",
    "crates/vibeeye-mcp",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
authors = ["VibeEye Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vibeeye/vibeeye"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.45.0", features = ["full"] }

# CLI framework
clap = { version = "4.5.37", features = ["derive"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Browser engine (constrained by spec C-01)
servo = "0.1.0"
url = "2.5"
dpi = "0.1"

# MCP SDK
rust-mcp-sdk = { version = "0.9.0", features = ["server", "stdio"] }
rust-mcp-schema = "0.10.0"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Logging/tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Markdown processing
pulldown-cmark = "0.13.0"
pulldown-cmark-to-cmark = "21.0.0"

# HTML processing
scraper = "0.23.1"
html5ever = "0.31.0"

# Time handling
chrono = { version = "0.4.41", features = ["serde"] }

# Testing
mockall = "0.13.1"
tempfile = "3.19.0"

# Async traits
async-trait = "0.1.88"

# JSON Schema
schemars = { version = "0.8.22", features = ["chrono"] }

# Workspace crates
vibeeye-core = { path = "crates/vibeeye-core" }
vibeeye-app = { path = "crates/vibeeye-app" }
