[package]
name = "vibeeye-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared library for VibeEye browser logic and tool registry"

[dependencies]
vibeeye-core = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Browser engine (constrained by spec C-01)
servo = { workspace = true }
url = { workspace = true }
dpi = { workspace = true }
rustls = { workspace = true }

# MCP SDK
rust-mcp-sdk = { workspace = true }
rust-mcp-schema = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Content processing
pulldown-cmark = { workspace = true }
pulldown-cmark-to-cmark = { workspace = true }
scraper = { workspace = true }
html-to-markdown-rs = { workspace = true }

# Crawl support
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
quick-xml = { version = "0.37", features = ["serialize"] }
toml = "0.8"
dirs = "6"

# Time handling
chrono = { workspace = true }

# Optional: SurrealDB embedded storage
surrealdb = { workspace = true, optional = true }

# Optional: embeddings, progress bars, table formatting
indicatif = { workspace = true, optional = true }
comfy-table = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }

[features]
default = []
surrealdb = ["dep:surrealdb"]
embeddings = ["surrealdb", "dep:indicatif", "dep:comfy-table", "dep:dotenvy"]

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
