[package]
name = "vibeeye-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "VibeEye CLI - thin interface over vibeeye-app"

[[bin]]
name = "vibe-eye"
path = "src/main.rs"

[dependencies]
vibeeye-core = { workspace = true }
vibeeye-app = { workspace = true }

# CLI framework
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Directories
dirs = { workspace = true }

# Optional: .env file loading for embedding API keys
dotenvy = { workspace = true, optional = true }

# Table formatting for query results
comfy-table = { workspace = true }

# Low-level exit syscall to bypass SpiderMonkey atexit segfault
libc = "0.2"

[features]
default = []
surrealdb = ["vibeeye-app/surrealdb"]
embeddings = ["surrealdb", "vibeeye-app/embeddings", "dep:dotenvy"]

[dev-dependencies]
tempfile = { workspace = true }
