[package]
name = "vibeeye-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "VibeEye MCP Server - thin interface over vibeeye-app"

[[bin]]
name = "vibeeye-mcp"
path = "src/main.rs"

[dependencies]
vibeeye-core = { workspace = true }
vibeeye-app = { workspace = true }

# MCP SDK
rust-mcp-sdk = { workspace = true }
rust-mcp-schema = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Directories
dirs = { workspace = true }

[features]
default = []
surrealdb = ["vibeeye-app/surrealdb"]
embeddings = ["vibeeye-app/embeddings", "surrealdb"]

[dev-dependencies]
tempfile = { workspace = true }
